--- a/modal_test.html
+++ b/modal_test.html
@@ -71,27 +71,55 @@
         OpenBootstrapPopup();
     };
     function OpenBootstrapPopup() {
-        $("#simpleModal").modal('show');
+        $("#sign-in-modal").modal('show');
     }
 </script>
-<div id="simpleModal" class="modal" tabindex="-1" role="dialog">
-    <div class="modal-dialog" role="document">
+<div class="modal fade" id="sign-in-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
         <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title">Customer Form</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
+          <div class="modal-body">
+            <div class="container">
+              <div class="row ">
+                <div class="col">
+                  <div id="sign-in-graphic d-flex">
+                    <h2 class="text-black">Don't have an account yet?</h2>
+                    <h2>What are you waiting for?!</h2>
+                    <button type="button" class="btn btn-primary" data-bs-target="sign-up-modal">Sign Up</button>
+                    <img src="./images/sign-in-graphic.png" class="img-fluid rounded-top" alt="">
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="sign-in-form d-flex flex-column align-items-center">
+                    <h2 class="d-flex p-3 justify-content-center">Sign In</h2>
+                    <div class="mb-1">
+                      <input type="text" class="form-control d-flex mb-3 justify-content-center" id="sign-in-username">
+                    </div>
+                    <div class="mb-1">
+                      <input type="email" class="form-control d-flex mb-3 justify-content-center" id="sign-in-email">
+                    </div>
+                    <div class="mb-1">
+                      <input type="password" id="sign-in-email " class="form-control d-flex mb-3 justify-content-center" aria-describedby="passwordHelpBlock">
+                    </div>
+                    <div class="mb-1">
+                      <button type="button" class="btn btn-primary d-flex mb-3 justify-content-center">Sign In</button>
+                    </div>
+                    <div class="mb-1">
+                      <h6>Or sign in with social media</h6>
+                    </div>
+                    <div class="d-flex">
+                      <img src="./images/sign-in-graphic.png" class="img-fluid rounded-top" alt="">
+                      <img src="./images/sign-in-graphic.png" class="img-fluid rounded-top" alt="">
+                      <img src="./images/sign-in-graphic.png" class="img-fluid rounded-top" alt="">
+                      <img src="./images/sign-in-graphic.png" class="img-fluid rounded-top" alt="">
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
-            <div class="modal-body">
-                I love ASPSnippets!
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            </div>
+          </div>
         </div>
+      </div>
     </div>
-</div>
 </body>
 
 </html>
