--- a/modal_test.html
+++ b/modal_test.html
@@ -5,6 +5,7 @@
   <title>Landing</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="./css/style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 
@@ -74,46 +75,89 @@
         $("#sign-in-modal").modal('show');
     }
 </script>
-<div class="modal fade" id="sign-in-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
+<!-- Sign In Modal-->
+<!-- <div class="modal fade" id="sign-in-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-lg">
         <div class="modal-content">
-          <div class="modal-body">
-            <div class="container">
-              <div class="row ">
-                <div class="col">
-                  <div id="sign-in-graphic d-flex">
-                    <h2 class="text-black">Don't have an account yet?</h2>
-                    <h2>What are you waiting for?!</h2>
-                    <button type="button" class="btn btn-primary" data-bs-target="sign-up-modal">Sign Up</button>
-                    <img src="./images/sign-in-graphic.png" class="img-fluid rounded-top" alt="">
-                  </div>
+          <div class="modal-body-fluid">
+            <div class="container-fluid">
+              <div class="row d-flex mb-5">
+                <div id="sign-up-graphic" class="col bg-primary text-white rounded p-5 d-flex flex-column justify-content-around">
+                    <h5 class="d-flex justify-content-center fw-bold mb-3">Don't have an account yet?</h2>
+                    <h5 class="d-flex justify-content-center fw-bold mb-0">What are you waiting for?!</h2>
+                    <button id="sign-in-sign-up" type="button" class="btn btn-primary mx-auto fw-bold my-5" data-bs-target="sign-up-modal">SIGN UP</button>
+                    <img id="girl-stonks"src="./images/sign-in-graphic.png" class="img-fluid rounded-top" alt="girl-stonks">
                 </div>
-                <div class="col">
-                  <div class="sign-in-form d-flex flex-column align-items-center">
-                    <h2 class="d-flex p-3 justify-content-center">Sign In</h2>
-                    <div class="mb-1">
-                      <input type="text" class="form-control d-flex mb-3 justify-content-center" id="sign-in-username">
+                <div id="sign-in-form" class="col d-flex flex-column justify-content-between align-items-center">
+                    <h2 class="d-flex pt-5 justify-content-center fw-bold">Sign In</h2>
+                    <div id="sign-in-username">
+                      <input type="text" class="form-control d-flex justify-content-center mb-1">
+                      <img src="./images/username.svg" alt="text">
                     </div>
-                    <div class="mb-1">
-                      <input type="email" class="form-control d-flex mb-3 justify-content-center" id="sign-in-email">
+                    <div id="sign-in-email">
+                      <input type="email" class="form-control d-flex justify-content-center mb-1">
+                      <img src="./images/email.svg" alt="email">
                     </div>
-                    <div class="mb-1">
-                      <input type="password" id="sign-in-email " class="form-control d-flex mb-3 justify-content-center" aria-describedby="passwordHelpBlock">
+                    <div id="sign-in-password">
+                      <input type="password"class="form-control d-flex justify-content-center" aria-describedby="passwordHelpBlock">
+                      <img src="./images/password.svg" alt="password">
                     </div>
-                    <div class="mb-1">
-                      <button type="button" class="btn btn-primary d-flex mb-3 justify-content-center">Sign In</button>
+                    <div id="sign-in-sign-in-button" class="my-3">
+                      <button type="button" class="btn btn-primary fw-bold d-flex px-5 justify-content-center">Sign in</button>
                     </div>
-                    <div class="mb-1">
-                      <h6>Or sign in with social media</h6>
+                    <div>
+                      <p>Or sign in with social media</p>
                     </div>
                     <div class="d-flex">
-                      <img src="./images/sign-in-graphic.png" class="img-fluid rounded-top" alt="">
-                      <img src="./images/sign-in-graphic.png" class="img-fluid rounded-top" alt="">
-                      <img src="./images/sign-in-graphic.png" class="img-fluid rounded-top" alt="">
-                      <img src="./images/sign-in-graphic.png" class="img-fluid rounded-top" alt="">
+                      <span class="soycle"><img src="./images/facebook.svg" class="img-fluid" alt="facebook"></span>
+                      <span class="soycle"><img src="./images/twitter.svg" class="img-fluid" alt="twitter"></span>
+                      <span class="soycle"><img src="./images/google.svg" class="img-fluid" alt="gmail"></span>
+                      <span class="soycle"><img src="./images/linkedin.svg" class="img-fluid" alt="linkedin"></span>
                     </div>
-                  </div>
                 </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div> -->
+    <div class="modal fade" id="sign-in-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+          <div class="modal-body-fluid">
+            <div class="container-fluid">
+              <div class="row d-flex py-5">
+                <div id="sign-up-form" class="col d-flex flex-column justify-content-between align-items-center">
+                  <h2 class="d-flex pt-5 mb-4 justify-content-center fw-bold">Sign Up</h2>
+                  <div id="sign-in-username">
+                    <input type="text" class="form-control d-flex justify-content-center mb-3">
+                    <img src="./images/username.svg" alt="text">
+                  </div>
+                  <div id="sign-in-email">
+                    <input type="email" class="form-control d-flex justify-content-center mb-3">
+                    <img src="./images/email.svg" alt="email">
+                  </div>
+                  <div id="sign-in-password">
+                    <input type="password"class="form-control d-flex justify-content-center" aria-describedby="passwordHelpBlock">
+                    <img src="./images/password.svg" alt="password">
+                  </div>
+                  <div id="sign-in-sign-in-button" class="my-3">
+                    <button type="button" class="btn btn-primary fw-bold d-flex px-5 justify-content-center">Sign up</button>
+                  </div>
+                  <div>
+                    <p>Or sign in with social media</p>
+                  </div>
+                  <div class="d-flex">
+                    <span class="soycle"><img src="./images/facebook.svg" class="img-fluid" alt="facebook"></span>
+                    <span class="soycle"><img src="./images/twitter.svg" class="img-fluid" alt="twitter"></span>
+                    <span class="soycle"><img src="./images/google.svg" class="img-fluid" alt="gmail"></span>
+                    <span class="soycle"><img src="./images/linkedin.svg" class="img-fluid" alt="linkedin"></span>
+                  </div>
+              </div>
+                <div id="sign-up-graphic" class="col p-5 d-flex flex-column justify-content-around">
+                    <img id="girl-with-ipad"src="./images/sign-up-graphic.png" class="img-fluid rounded-top" alt="girl-stonks">
+                </div>
+                
               </div>
             </div>
           </div>
