tweaked border radius of sign-in page

--- a/modal_test.html
+++ b/modal_test.html
@@ -76,13 +76,13 @@
     }
 </script>
 <!-- Sign In Modal-->
-<!-- <div class="modal fade" id="sign-in-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="sign-in-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog modal-lg">
         <div class="modal-content">
           <div class="modal-body-fluid">
             <div class="container-fluid">
               <div class="row d-flex mb-5">
-                <div id="sign-up-graphic" class="col bg-primary text-white rounded p-5 d-flex flex-column justify-content-around">
+                <div id="sign-up-graphic" class="col bg-primary text-white p-5 d-flex flex-column justify-content-around">
                     <h5 class="d-flex justify-content-center fw-bold mb-3">Don't have an account yet?</h2>
                     <h5 class="d-flex justify-content-center fw-bold mb-0">What are you waiting for?!</h2>
                     <button id="sign-in-sign-up" type="button" class="btn btn-primary mx-auto fw-bold my-5" data-bs-target="sign-up-modal">SIGN UP</button>
@@ -120,8 +120,8 @@
           </div>
         </div>
       </div>
-    </div> -->
-    <div class="modal fade" id="sign-in-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    </div>
+    <!-- <div class="modal fade" id="sign-in-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog modal-lg">
         <div class="modal-content">
           <div class="modal-body-fluid">
@@ -163,7 +163,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 </body>
 
 </html>
