--- a/landing.html
+++ b/landing.html
@@ -71,7 +71,7 @@
                 </div>
                 <p class="features">Free 14 day trial <span class="blue__dot"> </span>Manage customers in minutes <span class="blue__dot"></span> Cancel at any time</p>
             </div>
-            <div class="col landing__right d-flex">
+            <div class="col landing__right">
                 <div class="lp__icons__container">
                     <div class="lp__icons icon1">
                         <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -200,9 +200,28 @@
                             <path d="M42 12C43.5913 12 45.1174 11.3679 46.2426 10.2426C47.3679 9.11742 48 7.5913 48 6C48 4.4087 47.3679 2.88258 46.2426 1.75736C45.1174 0.632141 43.5913 0 42 0C40.4087 0 38.8826 0.632141 37.7574 1.75736C36.6321 2.88258 36 4.4087 36 6C36 7.5913 36.6321 9.11742 37.7574 10.2426C38.8826 11.3679 40.4087 12 42 12ZM12 3C5.37188 3 0 8.37188 0 15C0 21.6281 5.37188 27 12 27H36C39.3094 27 42 29.6906 42 33C42 35.6156 40.3219 37.8469 37.9875 38.6625C36.9094 37.0594 35.0812 36 33 36C29.6906 36 27 38.6906 27 42C27 45.3094 29.6906 48 33 48C35.3156 48 37.3219 46.6875 38.325 44.775C43.8375 43.6969 48 38.8312 48 33C48 26.3719 42.6281 21 36 21H12C8.69063 21 6 18.3094 6 15C6 11.6906 8.69063 9 12 9H24V10.3219C24 11.25 24.75 12 25.6781 12C26.0531 12 26.4094 11.8781 26.7094 11.6437L32.4094 7.20938C32.7844 6.91875 33 6.46875 33 6C33 5.53125 32.7844 5.08125 32.4094 4.79062L26.7 0.35625C26.4094 0.13125 26.0437 0 25.6687 0C24.75 0 24 0.75 24 1.67812V3H12ZM11.1938 39C10.1531 37.2094 8.22188 36 6 36C2.69063 36 0 38.6906 0 42C0 45.3094 2.69063 48 6 48C8.22188 48 10.1625 46.7906 11.1938 45H15V46.3219C15 47.25 15.75 48 16.6781 48C17.0531 48 17.4094 47.8781 17.7094 47.6438L23.4094 43.2094C23.7844 42.9188 24 42.4688 24 42C24 41.5312 23.7844 41.0812 23.4094 40.7906L17.7094 36.3562C17.4187 36.1312 17.0531 36 16.6781 36C15.75 36 15 36.75 15 37.6781V39H11.1938Z" fill="#0D6EFD"/>
                             </svg>
                             <p>Conversions</p>
+                        </div>
+                    </div><!-- mid card grid -->
+                    <div class="mid__content__card__container">
+                        <div class="mid__content__card">
+                            <div class="mid__card__content">
+                                <h4>Start accepting payments with ease</h4>
+                                <p>Deliver the world of payment options and seamless checkout experiences, making it easy for your<br> customers to pay you for your products and services.</p>
+                                <ul>
+                                    <li>Process transactions in up to 32 different currencies</li>
+                                    <li>Integrate with popular payment gateways like Stripe and Braintree</li>
+                                    <li>Accept credit & debit cards, PayPal, ACH, Apple Pay and more with the swipe of a finger</li>
+                                    <li>Select from a variety of different checkout options and experiences</li>
+                                </ul>
+                                <button>Learn more<svg width="16" height="17" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M15.6652 8.80884C16.1116 8.36246 16.1116 7.63754 15.6652 7.19116L8.80884 0.334784C8.36246 -0.111595 7.63754 -0.111595 7.19116 0.334784C6.74478 0.781163 6.74478 1.50608 7.19116 1.95246L13.2405 8.00179L7.19473 14.0511C6.74835 14.4975 6.74835 15.2224 7.19473 15.6688C7.64111 16.1152 8.36603 16.1152 8.81241 15.6688L15.6688 8.81241L15.6652 8.80884ZM1.95246 15.6652L8.80884 8.80884C9.25522 8.36246 9.25522 7.63754 8.80884 7.19116L1.95246 0.334784C1.50608 -0.111595 0.781163 -0.111595 0.334784 0.334784C-0.111595 0.781163 -0.111595 1.50608 0.334784 1.95246L6.38411 8.00179L0.338355 14.0511C-0.108024 14.4975 -0.108024 15.2224 0.338355 15.6688C0.784734 16.1152 1.50965 16.1152 1.95603 15.6688L1.95246 15.6652Z" fill="#0D6EFD"/>
+                                    </svg></button>
                             </div>
+                            
+                            <img src="/images/credit-card.png" alt="">
+                        </div>
                     </div>
-                </div>
+                </div><!-- mid content container -->
             </div><!-- middle row col -->
         </div><!-- middle row -->
     </div><!-- container main -->
