--- a/landing.html
+++ b/landing.html
@@ -257,9 +257,10 @@
                     <div class="container-fluid">
                         <div class="row d-flex mb-5">
                             <form action="/action_page.php" class="form-container">
-                            <h1>Chat With Us</h1>
-                            <textarea placeholder="Type message.." name="msg" required></textarea>
-                            <button type="button" class="chat__send__btn">Send<svg width="16" height="17" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                <h1>Chat With Us</h1>
+                                <textarea placeholder="Type message.." name="msg" required></textarea>
+                                <button type="button" class="chat__send__btn">Send<svg width="16" height="17" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M15.6652 8.80884C16.1116 8.36246 16.1116 7.63754 15.6652 7.19116L8.80884 0.334784C8.36246 -0.111595 7.63754 -0.111595 7.19116 0.334784C6.74478 0.781163 6.74478 1.50608 7.19116 1.95246L13.2405 8.00179L7.19473 14.0511C6.74835 14.4975 6.74835 15.2224 7.19473 15.6688C7.64111 16.1152 8.36603 16.1152 8.81241 15.6688L15.6688 8.81241L15.6652 8.80884ZM1.95246 15.6652L8.80884 8.80884C9.25522 8.36246 9.25522 7.63754 8.80884 7.19116L1.95246 0.334784C1.50608 -0.111595 0.781163 -0.111595 0.334784 0.334784C-0.111595 0.781163 -0.111595 1.50608 0.334784 1.95246L6.38411 8.00179L0.338355 14.0511C-0.108024 14.4975 -0.108024 15.2224 0.338355 15.6688C0.784734 16.1152 1.50965 16.1152 1.95603 15.6688L1.95246 15.6652Z" fill="#0D6EFD"/>
                                 </svg></button>
                                 <button type="button" class="chat__close__btn" data-bs-toggle="modal" data-bs-target="#chat-modal">Close</button>
@@ -271,6 +272,8 @@
         </div>
     </div>
 
+<!-- Sign In Modal-->
+
 <div class="modal fade" id="sign-in-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
@@ -280,7 +283,7 @@
               <div id="sign-up-graphic" class="col bg-primary text-white p-5 d-flex flex-column justify-content-around">
                   <h5 class="d-flex justify-content-center fw-bold mb-3">Don't have an account yet?</h2>
                   <h5 class="d-flex justify-content-center fw-bold mb-0">What are you waiting for?!</h2>
-                  <button id="sign-in-sign-up" type="button" class="btn btn-primary mx-auto fw-bold my-5" data-bs-target="sign-up-modal">SIGN UP</button>
+                  <button id="sign-in-sign-up" type="button" class="btn btn-primary mx-auto fw-bold my-5" data-bs-toggle="modal" data-bs-target="#sign-up-modal">SIGN UP</button>
                   <img id="girl-stonks"src="./images/sign-in-graphic.png" class="img-fluid rounded-top" alt="girl-stonks">
               </div>
               <div id="sign-in-form" class="col d-flex flex-column justify-content-between align-items-center">
