added features,pricing,support w/some content

--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="nav justify-content-center m-auto">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Features</a>
+                  <a class="nav-link" href="features.html">Features</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Pricing</a>
+                  <a class="nav-link" href="pricing">Pricing</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">How it works</a>
+                  <a class="nav-link" href="how_it_works.html">How it works</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Support</a>
+                    <a class="nav-link" href="support.html">Support</a>
                   </li>
               </ul>
             <form class="d-flex justify-content-center" role="search">
@@ -68,7 +68,7 @@
                         </svg></button>
                 </div>
                 <div class="landing__pg__sign__in__link">
-                    <a href="#">Aready using <span class="bold">Double</span>Tap?<span class="bold">Sign in</span></a>
+                    <a href="#" data-bs-toggle="modal" data-bs-target="#sign-in-modal">Aready using <span class="bold">Double</span>Tap?<span class="bold">Sign in</span></a>
                 </div>
                 <p class="features">Free 14 day trial <span class="blue__dot"> </span>Manage customers in minutes <span class="blue__dot"></span> Cancel at any time</p>
             </div>
