added other page content

--- a/support.html
+++ b/support.html
@@ -176,55 +176,91 @@
                 </div>
             </div>
         </div><!-- row -->
-        <div class="row m-auto">
-            <div class="col m-auto text-center">
-                <div class="mid__content__container">
-                    <h3>Start to explore <span class="bold">Double</span>Tap</h3>
-                    <p>A new and better way for small business to manage their customers base, payments, and keep track of internal tasks.</p>
-                    <div class="mid__card__grid">
-                        <div class="mid__grid__item"><svg width="36" height="48" viewBox="0 0 36 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M29.0816 22.7473C31.6813 21.4179 33.3357 19.0545 32.9516 15.1254C32.4493 9.74878 28.0337 7.94672 22.1844 7.44459V0H17.6349V7.23778C16.4532 7.23778 15.242 7.26731 14.0308 7.29684V0H9.48131V7.44459C7.80863 7.49512 5.8605 7.47047 0.352875 7.44459V12.2894C3.94481 12.2258 5.82947 11.995 6.26128 14.2982V34.6822C5.98706 36.5095 4.52466 36.2464 1.26862 36.1888L0.352969 41.595C8.64806 41.595 9.48141 41.6245 9.48141 41.6245V48H14.0309V41.7131C15.2716 41.7427 16.4828 41.7427 17.635 41.7427V48H22.1845V41.6245C29.8063 41.2109 34.9014 39.2907 35.5809 32.112C36.1126 26.3514 33.3947 23.7812 29.0816 22.7473ZM14.1195 12.6143C16.6897 12.6143 24.7251 11.8168 24.7251 17.1638C24.7251 22.2746 16.6897 21.6837 14.1195 21.6837V12.6143ZM14.1195 36.2183V26.2332C17.1919 26.2332 26.6002 25.3765 26.6002 31.2259C26.6001 36.8683 17.1919 36.2183 14.1195 36.2183Z" fill="#0D6EFD"/>
-                            </svg>
-                            <p>Payments</p>
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
+        <div class="container">
+        <section class="section mb-5">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-lg-8 col-xl-7 text-center desc">
+                        <h2 class="h1 mb-3">How can we help?</h2>
+                        <p class="mx-lg-8">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa.</p>
+                        <form class="d-flex flex-column flex-md-row mt-4"><input type="email" class="form-control me-sm-2 mb-2 mb-sm-0" placeholder="you@yoursite.com"> <button class="btn btn-primary flex-shrink-0" type="submit">Get Started</button></form>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="section pt-0">
+            <div class="container">
+                <div class="row gy-4 justify-content-center">
+                    <div class="col-sm-6 col-md-6 col-lg-4">
+                        <div class="card support__card__container">
+                            <div class="card-body d-flex">
+                                <div class="icon-lg bg-primary rounded-3 text-white support__card"><i class="fa fa-question-circle"></i></div>
+                                <div class="ps-3 col">
+                                    <h5 class="h6 mb-2"><a class="stretched-link text-reset" href="#">Buying and Item Support</a></h5>
+                                    <p class="m-0">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
+                                </div>
                             </div>
-                        <div class="mid__grid__item"><svg width="60" height="48" viewBox="0 0 60 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M13.5 15C15.4891 15 17.3968 14.2098 18.8033 12.8033C20.2098 11.3968 21 9.48912 21 7.5C21 5.51088 20.2098 3.60322 18.8033 2.1967C17.3968 0.790176 15.4891 0 13.5 0C11.5109 0 9.60322 0.790176 8.1967 2.1967C6.79018 3.60322 6 5.51088 6 7.5C6 9.48912 6.79018 11.3968 8.1967 12.8033C9.60322 14.2098 11.5109 15 13.5 15ZM48 15C49.9891 15 51.8968 14.2098 53.3033 12.8033C54.7098 11.3968 55.5 9.48912 55.5 7.5C55.5 5.51088 54.7098 3.60322 53.3033 2.1967C51.8968 0.790176 49.9891 0 48 0C46.0109 0 44.1032 0.790176 42.6967 2.1967C41.2902 3.60322 40.5 5.51088 40.5 7.5C40.5 9.48912 41.2902 11.3968 42.6967 12.8033C44.1032 14.2098 46.0109 15 48 15ZM0 28.0031C0 29.1 0.9 30 1.99687 30H22.0031C22.0219 30 22.0406 30 22.0687 30C19.575 27.7969 18.0094 24.5812 18.0094 21C18.0094 20.2875 18.075 19.5938 18.1875 18.9094C16.9125 18.3187 15.4969 18 14.0062 18H10.0031C4.48125 18 0 22.4813 0 28.0031ZM37.9969 30H58.0031C59.1094 30 60 29.1 60 28.0031C60 22.4813 55.5187 18 49.9969 18H46.0031C44.5125 18 43.0969 18.3281 41.8219 18.9094C41.9438 19.5844 42 20.2875 42 21C42 24.5812 40.425 27.7969 37.9406 30C37.9594 30 37.9781 30 38.0062 30H37.9969ZM30 16.5C30.5909 16.5 31.1761 16.6164 31.7221 16.8425C32.268 17.0687 32.7641 17.4002 33.182 17.818C33.5998 18.2359 33.9313 18.732 34.1575 19.2779C34.3836 19.8239 34.5 20.4091 34.5 21C34.5 21.5909 34.3836 22.1761 34.1575 22.7221C33.9313 23.268 33.5998 23.7641 33.182 24.182C32.7641 24.5998 32.268 24.9313 31.7221 25.1575C31.1761 25.3836 30.5909 25.5 30 25.5C29.4091 25.5 28.8239 25.3836 28.2779 25.1575C27.732 24.9313 27.2359 24.5998 26.818 24.182C26.4002 23.7641 26.0687 23.268 25.8425 22.7221C25.6164 22.1761 25.5 21.5909 25.5 21C25.5 20.4091 25.6164 19.8239 25.8425 19.2779C26.0687 18.732 26.4002 18.2359 26.818 17.818C27.2359 17.4002 27.732 17.0687 28.2779 16.8425C28.8239 16.6164 29.4091 16.5 30 16.5ZM30 30C31.1819 30 32.3522 29.7672 33.4442 29.3149C34.5361 28.8626 35.5282 28.1997 36.364 27.364C37.1997 26.5282 37.8626 25.5361 38.3149 24.4442C38.7672 23.3522 39 22.1819 39 21C39 19.8181 38.7672 18.6478 38.3149 17.5558C37.8626 16.4639 37.1997 15.4718 36.364 14.636C35.5282 13.8003 34.5361 13.1374 33.4442 12.6851C32.3522 12.2328 31.1819 12 30 12C28.8181 12 27.6478 12.2328 26.5558 12.6851C25.4639 13.1374 24.4718 13.8003 23.636 14.636C22.8003 15.4718 22.1374 16.4639 21.6851 17.5558C21.2328 18.6478 21 19.8181 21 21C21 22.1819 21.2328 23.3522 21.6851 24.4442C22.1374 25.5361 22.8003 26.5282 23.636 27.364C24.4718 28.1997 25.4639 28.8626 26.5558 29.3149C27.6478 29.7672 28.8181 30 30 30ZM24.4969 37.5H35.5031C39.2344 37.5 42.3656 40.05 43.2469 43.5H16.7531C17.6437 40.05 20.775 37.5 24.4969 37.5ZM24.4969 33C17.5969 33 12 38.5969 12 45.4969C12 46.875 13.1156 48 14.5031 48H45.4969C46.875 48 48 46.8844 48 45.4969C48 38.5969 42.4031 33 35.5031 33H24.4969Z" fill="#0D6EFD"/>
-                            </svg>
-                            <p>Retention</p>
-                            </div>
-                        <div class="mid__grid__item"><svg width="48" height="42" viewBox="0 0 48 42" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M3 1.5C3 0.675 2.325 0 1.5 0C0.675 0 0 0.675 0 1.5V34.5C0 38.6437 3.35625 42 7.5 42H46.5C47.325 42 48 41.325 48 40.5C48 39.675 47.325 39 46.5 39H7.5C5.01562 39 3 36.9844 3 34.5V1.5ZM18 14.25C18.5967 14.25 19.169 14.0129 19.591 13.591C20.0129 13.169 20.25 12.5967 20.25 12C20.25 11.4033 20.0129 10.831 19.591 10.409C19.169 9.98705 18.5967 9.75 18 9.75C17.4033 9.75 16.831 9.98705 16.409 10.409C15.9871 10.831 15.75 11.4033 15.75 12C15.75 12.5967 15.9871 13.169 16.409 13.591C16.831 14.0129 17.4033 14.25 18 14.25ZM29.25 21C29.25 20.4033 29.0129 19.831 28.591 19.409C28.169 18.9871 27.5967 18.75 27 18.75C26.4033 18.75 25.831 18.9871 25.409 19.409C24.9871 19.831 24.75 20.4033 24.75 21C24.75 21.5967 24.9871 22.169 25.409 22.591C25.831 23.0129 26.4033 23.25 27 23.25C27.5967 23.25 28.169 23.0129 28.591 22.591C29.0129 22.169 29.25 21.5967 29.25 21ZM36 29.25C36.5967 29.25 37.169 29.0129 37.591 28.591C38.0129 28.169 38.25 27.5967 38.25 27C38.25 26.4033 38.0129 25.831 37.591 25.409C37.169 24.9871 36.5967 24.75 36 24.75C35.4033 24.75 34.831 24.9871 34.409 25.409C33.9871 25.831 33.75 26.4033 33.75 27C33.75 27.5967 33.9871 28.169 34.409 28.591C34.831 29.0129 35.4033 29.25 36 29.25ZM41.25 9C41.25 8.40326 41.0129 7.83097 40.591 7.40901C40.169 6.98705 39.5967 6.75 39 6.75C38.4033 6.75 37.831 6.98705 37.409 7.40901C36.9871 7.83097 36.75 8.40326 36.75 9C36.75 9.59674 36.9871 10.169 37.409 10.591C37.831 11.0129 38.4033 11.25 39 11.25C39.5967 11.25 40.169 11.0129 40.591 10.591C41.0129 10.169 41.25 9.59674 41.25 9ZM15 29.25C15.5967 29.25 16.169 29.0129 16.591 28.591C17.0129 28.169 17.25 27.5967 17.25 27C17.25 26.4033 17.0129 25.831 16.591 25.409C16.169 24.9871 15.5967 24.75 15 24.75C14.4033 24.75 13.831 24.9871 13.409 25.409C12.9871 25.831 12.75 26.4033 12.75 27C12.75 27.5967 12.9871 28.169 13.409 28.591C13.831 29.0129 14.4033 29.25 15 29.25Z" fill="#0D6EFD"/>
-                            </svg>
-                            <p>Reporting</p>
-                            </div>
-                        <div class="mid__grid__item"><svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M42 12C43.5913 12 45.1174 11.3679 46.2426 10.2426C47.3679 9.11742 48 7.5913 48 6C48 4.4087 47.3679 2.88258 46.2426 1.75736C45.1174 0.632141 43.5913 0 42 0C40.4087 0 38.8826 0.632141 37.7574 1.75736C36.6321 2.88258 36 4.4087 36 6C36 7.5913 36.6321 9.11742 37.7574 10.2426C38.8826 11.3679 40.4087 12 42 12ZM12 3C5.37188 3 0 8.37188 0 15C0 21.6281 5.37188 27 12 27H36C39.3094 27 42 29.6906 42 33C42 35.6156 40.3219 37.8469 37.9875 38.6625C36.9094 37.0594 35.0812 36 33 36C29.6906 36 27 38.6906 27 42C27 45.3094 29.6906 48 33 48C35.3156 48 37.3219 46.6875 38.325 44.775C43.8375 43.6969 48 38.8312 48 33C48 26.3719 42.6281 21 36 21H12C8.69063 21 6 18.3094 6 15C6 11.6906 8.69063 9 12 9H24V10.3219C24 11.25 24.75 12 25.6781 12C26.0531 12 26.4094 11.8781 26.7094 11.6437L32.4094 7.20938C32.7844 6.91875 33 6.46875 33 6C33 5.53125 32.7844 5.08125 32.4094 4.79062L26.7 0.35625C26.4094 0.13125 26.0437 0 25.6687 0C24.75 0 24 0.75 24 1.67812V3H12ZM11.1938 39C10.1531 37.2094 8.22188 36 6 36C2.69063 36 0 38.6906 0 42C0 45.3094 2.69063 48 6 48C8.22188 48 10.1625 46.7906 11.1938 45H15V46.3219C15 47.25 15.75 48 16.6781 48C17.0531 48 17.4094 47.8781 17.7094 47.6438L23.4094 43.2094C23.7844 42.9188 24 42.4688 24 42C24 41.5312 23.7844 41.0812 23.4094 40.7906L17.7094 36.3562C17.4187 36.1312 17.0531 36 16.6781 36C15.75 36 15 36.75 15 37.6781V39H11.1938Z" fill="#0D6EFD"/>
-                            </svg>
-                            <p>Conversions</p>
-                        </div>
-                    </div><!-- mid card grid -->
-                    <div class="mid__content__card__container">
-                        <div class="mid__content__card">
-                            <div class="mid__card__content">
-                                <h4>Start accepting payments with ease</h4>
-                                <p>Deliver the world of payment options and seamless checkout experiences, making it easy for your<br> customers to pay you for your products and services.</p>
-                                <ul>
-                                    <li>Process transactions in up to 32 different currencies</li>
-                                    <li>Integrate with popular payment gateways like Stripe and Braintree</li>
-                                    <li>Accept credit & debit cards, PayPal, ACH, Apple Pay and more with the swipe of a finger</li>
-                                    <li>Select from a variety of different checkout options and experiences</li>
-                                </ul>
-                                <button><a href="how_it_works.html" style="text-decoration: none;color:none;">Learn more</a><svg width="16" height="17" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M15.6652 8.80884C16.1116 8.36246 16.1116 7.63754 15.6652 7.19116L8.80884 0.334784C8.36246 -0.111595 7.63754 -0.111595 7.19116 0.334784C6.74478 0.781163 6.74478 1.50608 7.19116 1.95246L13.2405 8.00179L7.19473 14.0511C6.74835 14.4975 6.74835 15.2224 7.19473 15.6688C7.64111 16.1152 8.36603 16.1152 8.81241 15.6688L15.6688 8.81241L15.6652 8.80884ZM1.95246 15.6652L8.80884 8.80884C9.25522 8.36246 9.25522 7.63754 8.80884 7.19116L1.95246 0.334784C1.50608 -0.111595 0.781163 -0.111595 0.334784 0.334784C-0.111595 0.781163 -0.111595 1.50608 0.334784 1.95246L6.38411 8.00179L0.338355 14.0511C-0.108024 14.4975 -0.108024 15.2224 0.338355 15.6688C0.784734 16.1152 1.50965 16.1152 1.95603 15.6688L1.95246 15.6652Z" fill="#0D6EFD"/>
-                                    </svg></button>
-                            </div>
-                            
-                            <img src="images/credit-card.png" alt="">
                         </div>
                     </div>
-                </div><!-- mid content container -->
-            </div><!-- middle row col -->
-        </div><!-- middle row -->
+                    <div class="col-sm-6 col-md-6 col-lg-4">
+                        <div class="card support__card__container">
+                            <div class="card-body d-flex">
+                                <div class="icon-lg bg-primary rounded-3 text-white support__card"><i class="fa fa-id-badge"></i></div>
+                                <div class="ps-3 col">
+                                    <h5 class="h6 mb-2"><a class="stretched-link text-reset" href="#">Licensing</a></h5>
+                                    <p class="m-0">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-6 col-lg-4">
+                        <div class="card support__card__container">
+                            <div class="card-body d-flex">
+                                <div class="icon-lg bg-primary rounded-3 text-white support__card"><i class="fa fa-user"></i></div>
+                                <div class="ps-3 col">
+                                    <h5 class="h6 mb-2"><a class="stretched-link text-reset" href="#">Your Account</a></h5>
+                                    <p class="m-0">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-6 col-lg-4">
+                        <div class="card support__card__container">
+                            <div class="card-body d-flex">
+                                <div class="icon-lg bg-primary rounded-3 text-white support__card"><i class="fa fa-trophy"></i></div>
+                                <div class="ps-3 col">
+                                    <h5 class="h6 mb-2"><a class="stretched-link text-reset" href="#">Copyright and Trademarks</a></h5>
+                                    <p class="m-0">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-6 col-lg-4">
+                        <div class="card support__card__container">
+                            <div class="card-body d-flex">
+                                <div class="icon-lg bg-primary rounded-3 text-white support__card"><i class="fa fa-book"></i></div>
+                                <div class="ps-3 col">
+                                    <h5 class="h6 mb-2"><a class="stretched-link text-reset" href="#">Tax &amp; Compliance</a></h5>
+                                    <p class="m-0">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-6 col-lg-4">
+                        <div class="card support__card__container">
+                            <div class="card-body d-flex">
+                                <div class="icon-lg bg-primary rounded-3 text-white support__card"><i class="fa fa-check"></i></div>
+                                <div class="ps-3 col">
+                                    <h5 class="h6 mb-2"><a class="stretched-link text-reset" href="#">Licensing</a></h5>
+                                    <p class="m-0">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div><!-- container main -->
   </main>
   <footer>
