pricing page style update

--- a/pricing.html
+++ b/pricing.html
@@ -191,7 +191,7 @@
                             <li><i class="fa fa-database"></i> Unlimited MySQL Database</li>
                             <li class="not-avail"><i class="fa fa-clock-o"></i> 24X7 Support</li>
                             <li class="not-avail"><i class="fa fa-envelope"></i> Email Support</li>
-                        </ul><a href="#" class="view-more">View More</a></div>
+                        </ul><button class="view-more">View More</button></div>
                 </div>
             </div>
             <div class="col-md-4 col-sm-6">
@@ -208,7 +208,7 @@
                             <li><i class="fa fa-database"></i> Unlimited MySQL Database</li>
                             <li class="not-avail"><i class="fa fa-clock-o"></i> 24X7 Support</li>
                             <li class="not-avail"><i class="fa fa-envelope"></i> Email Support</li>
-                        </ul><a href="#" class="view-more">View More</a></div>
+                        </ul><button class="view-more">View More</button></div>
                 </div>
             </div>
             <div class="col-md-4 col-sm-12">
@@ -225,7 +225,8 @@
                             <li><i class="fa fa-database"></i> Unlimited MySQL Database</li>
                             <li class="not-avail"><i class="fa fa-clock-o"></i> 24X7 Support</li>
                             <li class="not-avail"><i class="fa fa-envelope"></i> Email Support</li>
-                        </ul><a href="#" class="view-more">View More</a></div>
+                        </ul>
+                        <button class="view-more">View More</button></div>
                 </div>
             </div>
         </div>
