--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                     <img src="./images/password.svg" alt="password">
                   </div>
                   <div id="sign-in-sign-in-button" class="my-3">
-                    <button type="button" class="btn btn-primary fw-bold d-flex px-5 justify-content-center" data-bs-dismiss="modal">Sign in</button>
+                    <button type="button" class="btn btn-primary fw-bold d-flex px-5 justify-content-center align-items-center" data-bs-dismiss="modal">Sign in</button>
                   </div>
                   <div>
                     <p>Or sign in with social media</p>
