modal css and pull

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                             <p>Conversions</p>
                         </div>
                     </div><!-- mid card grid -->
-                    <div class="mid__content__card__container">
+                    <div class="mid__content__card__container d-flex">
                         <div class="mid__content__card">
                             <div class="mid__card__content">
                                 <h4>Start accepting payments with ease</h4>
@@ -326,7 +326,7 @@
       <div class="modal-content">
         <div class="modal-body-fluid">
           <div class="container-fluid">
-            <div class="row d-flex py-5">
+            <div class="row d-flex m-auto">
               <div id="sign-up-form" class="col d-flex flex-column justify-content-between align-items-center">
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 <h2 class="d-flex pt-5 mb-4 justify-content-center fw-bold" >Sign Up</h2>
